--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
     
@@ -26,12 +25,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script defer src="main.js"></script>
+    <link rel="stylesheet" href="main.css"/>
   </head>
 <body>
   <header>
-    <div class="navigation-bar">
+    <nav class="navigation-bar">
       <ul class="menu">
-        <a href="javascript:void(0)" class="logo">🍎</a>
+        <li><a href="javascript:void(0)" class="logo">🍎</a></li>
         <li class="item">
           <div class="item__name"><a href="javascript:void(0)">스토어</a></div>
           <div class="item__info">
@@ -412,10 +412,10 @@
         <a href="javascript:void(0)" class="btn"><div class="material-icons">search</div></a>
         <a href="javascript:void(0)" class="btn"><div class="material-icons">shopping_bag</div></a>
       </ul>
-    </div>
+    </nav>
   </header>
   <main>
-    <div class="banner">
+    <section class="banner">
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -428,9 +428,9 @@
       </div>
       <div class="swiper-prev"><div class="material-icons">arrow_back_ios</div></div>
       <div class="swiper-next"><div class="material-icons">arrow_forward_ios</div></div>
-    </div>
-    <div class="main-inner">
-      <div class="top">
+    </section>
+    <section class="main-inner">
+      <section class="top">
         <div class="left">
           <h1 class="ad-main">스토어.</h1>
           <div class="ad-sub">좋아하는 Apple 제품을<br>구입하는 가장 좋은 방법.</div>
@@ -451,8 +451,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="card-section">
+      </section>
+      <section class="card-section">
         <div class="card">
           <a href="javascript:void(0)"><img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-13-mac-nav-202310?wid=400&hei=260&fmt=png-alpha&.v=1696964122666" alt="card__image" class="card__image"></a>
           <a href="javascript:void(0)" class="card__name">Mac</a>
@@ -485,8 +485,8 @@
           <a href="javascript:void(0)"><img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-13-accessories-nav-202309?wid=400&hei=260&fmt=png-alpha&.v=1692803114952" alt="card__image" class="card__image"></a>
           <a href="javascript:void(0)" class="card__name">액세서리</a>
         </div>
-      </div>
-      <div class="new-arrival">
+      </section>
+      <section class="new-arrival">
         <div class="new-comment">
           <h2 class="inline-black">최신 제품.</h2>
           <h2 class="inline-gray">따끈따끈한 신제품 이야기.</h2>
@@ -557,8 +557,8 @@
             </div>
           </div>
         </div>        
-      </div>
-      <div class="sessions">
+      </section>
+      <section class="sessions">
         <div class="session-comment">
           <h2 class="inline-black">도움의 손길.</h2>
           <h2 class="inline-gray">언제든 당신에게 맞는 방식으로.</h2>
@@ -607,24 +607,24 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="quick-btn">
+      </section>
+      <section class="quick-btn">
         <div class="quick-btn-comment">
           <h2 class="inline-black">빠른 링크</h2>
         </div>
         <div class="btn-section">
-          <ul class="btns">ß
-            <a href="javascript:void(0)"><li class="btn">주문상태</li></a>
-            <a href="javascript:void(0)"><li class="btn">쇼핑 도움말</li></a>
-            <a href="javascript:void(0)"><li class="btn">반품</li></a>
-            <a href="javascript:void(0)"><li class="btn">관심목록</li></a>
+          <ul class="btns">
+            <li class="btn"><a href="javascript:void(0)">주문상태</a></li>
+            <li class="btn"><a href="javascript:void(0)">쇼핑 도움말</a></li>
+            <li class="btn"><a href="javascript:void(0)">반품</a></li>
+            <li class="btn"><a href="javascript:void(0)">관심목록</a></li>
           </ul>
         </div>
-      </div>
-    </div>
+      </section>
+    </section>
   </main>
   <footer>
-    <div class="footer-inner">
+    <section class="footer-inner">
       <div class="notes">
         사업자등록번호 : 120-81-84429 | 통신판매업신고번호 : 제 2011-서울강남-00810호<br>대표이사 : PETER DENWOOD | 주소 : 서울 특별시 강남구 영동대로 517<br>대표전화 : 080-330-8877 | 팩스 : 02-6928-0000<br>
         <br>^^ 설맞이 AirPods Pro 스페셜 에디션은 Apple 리테일 매장 및 Apple Online Store에서 구입할 수 있으며, 판매는 재고 소진 시 종료됩니다. 고객당 구입 수량은 최대 2개로 제한됩니다. 설맞이 AirPods Pro 스페셜 에디션의 교체 또는 수리가 필요한 경우, 재고 여부에 따라 일반 AirPods Pro를 제공해 드릴 수도 있습니다.<br>Apple Pencil은 별도로 판매됩니다<br><br>◊◊ 프로모션 혜택은 2024년 1월 4일부터 3월 13일까지 적용 대상 고객이 Apple Store 매장이나 Apple 교육 할인 스토어에서, 또는 080-330-8877에 전화를 걸어 적용 가능 Apple 제품 및 프로모션 제품을 구입할 때 이용할 수 있습니다. 프로모션 전체 이용 약관이 적용됩니다. apple.com/kr/shop/back-to-school/terms-conditions를 참고하십시오.<br><br>AppleCare+에 대한 Apple 교육 할인 프로모션은 프로모션 기간 중 적용 대상 제품 및 AppleCare+를 Apple Store에서 직접 또는 교육용 온라인 Apple Store에서 동시에 구입하는 경우에 한해 적용 대상 제품에 적용되며, 프로모션 대상이 아닌 Apple 교육 할인 제품 구입 시에는 적용되지 않습니다. 프로모션 기간 외에 적용 대상 제품과 함께 구입한 AppleCare+의 경우 본 프로모션 가격이 적용되지 않습니다.<br>
@@ -735,8 +735,7 @@
           <div class="right"><a href="javascript:void(0)">대한민국</a></div>
         </div>
       </div>
-
-    </div>
+    </section>
   </footer>
 </body>
 </html>
