css variable 사용

--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
                   <div class="new-card">
                     <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-40-iphone-15-pro-202309?wid=800&hei=1000&fmt=p-jpg&qlt=95&.v=1692910040844" alt="card-image" class="new-card-image">
                     <div class="description">
-                      <div class="new-abs" id="white">IPHONE 15 PRO</div>
-                      <div class="new-main" id="white">티타늄</div>
-                      <div class="new-detail" id="white">₩1,550,000부터</div>
+                      <div class="new-abs" style="color : var(--applewhite)">IPHONE 15 PRO</div>
+                      <div class="new-main" style="color : var(--applewhite)">티타늄</div>
+                      <div class="new-detail" style="color : var(--applewhite)">₩1,550,000부터</div>
                     </div>
                   </div>
                 </a>
@@ -520,12 +520,12 @@
               </div>
               <div class="swiper-slide">
                 <a href="javascript:void(0)">
-                  <div class="new-card" id="white">
+                  <div class="new-card">
                     <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-50-cny-airpods-pro-202401_GEO_KR?wid=960&hei=1000&fmt=p-jpg&qlt=95&.v=1701826988522" alt="card-image" class="new-card-image">
                     <div class="description">
-                      <div class="new-abs" id="white">NEW</div>
-                      <div class="new-main" id="white">설맞이 AirPods Pro 스페셜<br>에디션^^</div>
-                      <div class="new-detail" id="white">₩359,000</div>
+                      <div class="new-abs" style="color : var(--applewhite)">NEW</div>
+                      <div class="new-main" style="color : var(--applewhite)">설맞이 AirPods Pro 스페셜<br>에디션^^</div>
+                      <div class="new-detail" style="color : var(--applewhite)">₩359,000</div>
                     </div>
                   </div>
                 </a>
@@ -535,9 +535,9 @@
                   <div class="new-card">
                     <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-40-watch-s9-202309_GEO_KR?wid=800&hei=1000&fmt=jpeg&qlt=90&.v=1693501331792" alt="card-image" class="new-card-image">
                     <div class="description">
-                      <span class="new-abs" id="white">APPLE WATCH SERIES 9</span>
-                      <div class="new-main" id="white">보다 똑똑. 보다 또렷. 보다 강력.</div>
-                      <div class="new-detail" id="white">₩599,000부터</div>
+                      <span class="new-abs" style="color : var(--applewhite)">APPLE WATCH SERIES 9</span>
+                      <div class="new-main" style="color : var(--applewhite)">보다 똑똑. 보다 또렷. 보다 강력.</div>
+                      <div class="new-detail" style="color : var(--applewhite)">₩599,000부터</div>
                     </div>
                   </div>
                 </a>
@@ -568,7 +568,7 @@
             <div class="session">
               <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-50-specialist-help-202309?wid=960&hei=1000&fmt=p-jpg&qlt=95&.v=1701194078821" alt="session-image" class="session-image">
               <div class="description">
-                <div class="abs" id="gray">APPLE스페셜리스트</div>
+                <div class="abs" style="color : var(--lightgray)">APPLE스페셜리스트</div>
                 <div class="main">스페셜리스트와 함꼐하는 일대일 쇼핑.<br>온라인 매장에서도</div>
                 <div class="detail"><br></div>
               </div>
@@ -578,7 +578,7 @@
             <div class="session">
               <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-50-TAA-202310?wid=960&hei=1000&fmt=p-jpg&qlt=95&.v=1697149577145" alt="session-image" class="session-image">
               <div class="description">
-                <div class="abs" id="gray">TODAY AT APPLE</div>
+                <div class="abs" style="color : var(--lightgray)">TODAY AT APPLE</div>
                 <div class="main">Apple Store의 무료 세션에 참여해<br>보세요.</div>
                 <div class="detail">최신 기능과 더불어 Apple 기기를 더욱 심도 있게 활용하는 법을<br>알아보세요</div>
               </div>
@@ -589,7 +589,7 @@
               <div class="session">
                 <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-25-apps-202108?wid=960&hei=480&fmt=p-jpg&qlt=95&.v=1626223748000" alt="session-image" class="session-image">
                 <div class="description">
-                  <div class="abs" id="gray"><br></div>
+                  <div class="abs" style="color : var(--lightgray)"><br></div>
                   <div class="main">무료 온라인 개인 맞춤 세션에서 새 기기를<br>설정하는 방법을 배워보세요.</div>
                   <div class="detail"><br></div>
                 </div>
@@ -599,7 +599,7 @@
               <div class="session">
                 <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/store-card-25-genius-202108?wid=960&hei=480&fmt=p-jpg&qlt=95&.v=1626384443000" alt="session-image" class="session-image">
                 <div class="description">
-                  <div class="abs" id="gray"><br></div>
+                  <div class="abs"><br></div>
                   <div class="main">Genius Bar에서 직접<br>전문가의 도움을 받을<br>수 있습니다.</div>
                   <div class="detail"><br></div>
                 </div>
@@ -721,7 +721,7 @@
         </ul>
       </div>
       <div class="footer-mini">
-        <h2 id="gray">다양한 쇼핑방법:<a href="javascript:void(0)">Apple Store를 방문</a>하거나, <a href="javascript:void(0)">리셀러</a>를 찾아보거나, 080-330-8877번으로 전화하세요.</h2>
+        <h2>다양한 쇼핑방법:<a href="javascript:void(0)">Apple Store를 방문</a>하거나, <a href="javascript:void(0)">리셀러</a>를 찾아보거나, 080-330-8877번으로 전화하세요.</h2>
         <div class="footer-end">
           <div class="left">Copyright © 2024 Apple Inc. 모든 권리 보유.
             <ul>
